  Khalitzburg even if it's not your current target, or knight can
  provoke all Sohees and then Brandish Spear them.
- statAddAuto_list is now case-insensitive.
- Recognize "Unknown error 15" ("You have been forced to disconnect by a GM").
- 'conf' command will now display what the old value was.
- "Received Possible Identify List" message now tells you how many items are
  in the list.

New config options:
- beepOnPM, beepOnChat if set to 1 will generate a beep when you
  hear a PM/public chat message.
- The attackSkillSlot and attackComboSlot blocks now have an extra option:
  isSelfSkill (flag)
  This specifies whether the combo skill is used on yourself.
- _defendMonsters consition, e.g.:
  partySkill Pneuma {
	  lvl 1
      target_defendMonsters Raydric Archer
  }
  will only cast this skill if a Raydric Archer's last attack hit the person.
- verboseDomains is the opposite of squelchDomains.
- missDamage; any damage you do <= this amount will be counted as a miss.
  (e.g. for monks who have Spirit Spheres)
- teleportAuto_useSP if set to 2 will only use SP when other players are 
  present.
- EXPERIMENTAL _misses and _totalMisses conditions, e.g. to switch elemental
  weapons using equipAuto when you are missing a monster that changed
  elements.
- shopTitleOversize (flag)
  chatTitleOversize (flag)
  if set to 1 will enable shop title or chatroom title length longer than 36 characters.
- pauseMapServer (seconds)
  Pause for (seconds) before connect to map server (Sometime server slower than bots).
- autoBreakTime now supports the 'all' time, which makes it take a break
  every day in the week.
- statsAddAuto_dontUseBonus (flag)
  If set to 1 then statsAddAuto will not factor in the stat bonuses at all.
- teleportAuto_attackedWhenSitting (flag)
  Teleport when a monster attacked you while you're auto-sitting. This is useful if
  you set mon_control.txt to completely ignore the attacks of certain monsters,